Finished all needed stuff

--- a/index.html
+++ b/index.html
@@ -65,6 +65,30 @@
                 </div>
             </div>
         </div>
+        <div class="quote">
+            <div class="quote-body">
+            <div class="message">
+                To know one's enemy, one must become his own enemy
+            </div>
+            <div class="author">
+                - Sun Tzu, probably
+            </div>
+            </div>
+        </div>
+        <div class="call-to-action">
+            <div class="cta-main">
+                <div class="left">
+                    <div class="cta-header">Call to action! It's time!</div>
+                    <div class="cta-message">Sign up using the button over there in order to stop existing!</div>
+                </div>
+                <div class="right">
+                    <button class="sign-up">Sign Up</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2021
     </div>
 </body>
 </html>
